--- a/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
+++ b/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
@@ -12,34 +12,94 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="8*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ListBox Grid.Row="0"
-                 SelectedItem="{Binding SelectedAddress}"
-                 ItemsSource="{Binding AddressViewModels}"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <DockPanel>
-                        <TextBlock Text="{Binding Path=AddressNumber}"
-                                   FontSize="24"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Center"
-                                   Margin="5,0,5,0"/>
-                        <TextBox FontSize="25"
-                                 Margin="0,0,5,0"
-                                 VerticalAlignment="Stretch"
-                                 MinWidth="350"
-                                 HorizontalAlignment="Stretch"
-                                 Text="{Binding Path=AddressApi}"/>
-                    </DockPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Grid Grid.Row="1" Margin="5,0,5,0">
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="8*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <ListBox Grid.Row="0"
+                     SelectedItem="{Binding SelectedAddress}"
+                     ItemsSource="{Binding AddressViewModels}"
+                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel>
+                            <TextBlock Text="{Binding Path=AddressNumber}"
+                                       FontSize="24"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Center"
+                                       Margin="5,0,5,0"/>
+                            <TextBox FontSize="25"
+                                     Margin="0,0,5,0"
+                                     VerticalAlignment="Stretch"
+                                     MinWidth="350"
+                                     HorizontalAlignment="Stretch"
+                                     Text="{Binding Path=AddressApi}"/>
+                        </DockPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Content="-"
+                        Margin="0,0,5,0"
+                        HorizontalAlignment="Right"
+                        Grid.Column="0"
+                        Width="50"
+                        Height="50"
+                        FontSize="25"
+                        FontWeight="Medium"
+                        Background="LightGray"
+                        Command="{Binding RemoveCommand}"
+                        VerticalAlignment="Center"
+                        VerticalContentAlignment="Center"/>
+                <Button Content="+"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Left"
+                        Grid.Column="1"
+                        Width="50"
+                        Height="50"
+                        FontSize="25"
+                        FontWeight="Medium"
+                        Background="LightGray"
+                        Command="{Binding AddCommand}"
+                        VerticalAlignment="Center"
+                        VerticalContentAlignment="Center"/>
+            </Grid>
+        </Grid>
+        <DockPanel Grid.Row="1">
+            <Label Content="Через сколько автоматически сменить контент"
+                   Height="50"
+                   FontSize="15"
+                   HorizontalAlignment="Left"
+                   VerticalContentAlignment="Center"
+                   VerticalAlignment="Center"
+                   Margin="5,0,5,0"/>
+            <Border BorderBrush="Black"
+                    Height="40"
+                    BorderThickness="1"
+                    Margin="5,0,5,0"
+                    Width="140">                
+            <TextBox Text="{Binding SwitchMediaTime}"
+                     FontSize="25"
+                     HorizontalContentAlignment="Center"
+                     VerticalContentAlignment="Center"
+                     TextChanged="TextBox_TextChanged"
+                     PreviewTextInput="TextBox_PreviewTextInput"
+                     Height="40"
+                     Width="140"                 
+                     HorizontalAlignment="Center"
+                     VerticalAlignment="Center"/>
+            </Border>
+        </DockPanel>
+        <Grid Grid.Row="2" Margin="5,0,5,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="0.4*"/>
-                <ColumnDefinition Width="0.4*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button Content="Cancel"
@@ -52,29 +112,9 @@
                     Background="Red"
                     Command="{Binding CancelCommand}"
                     VerticalAlignment="Center"/>
-            <Button Content="-"
-                    HorizontalAlignment="Right"
-                    Grid.Column="1"
-                    Width="50"
-                    Height="50"
-                    FontSize="25"
-                    FontWeight="Medium"
-                    Background="LightGray"
-                    Command="{Binding RemoveCommand}"
-                    VerticalAlignment="Center"/>
-            <Button Content="+"
-                    HorizontalAlignment="Right"
-                    Grid.Column="2"
-                    Width="50"
-                    Height="50"
-                    FontSize="25"
-                    FontWeight="Medium"
-                    Background="LightGray"
-                    Command="{Binding AddCommand}"
-                    VerticalAlignment="Center"/>
             <Button Content="Save"
                     Margin="10,0,0,0"
-                    Grid.Column="3"
+                    Grid.Column="1"
                     Width="100"
                     Height="50"
                     FontSize="25"
