--- a/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
+++ b/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
@@ -37,35 +37,42 @@
                                      MinWidth="350"
                                      HorizontalAlignment="Stretch"
                                      Text="{Binding Path=AddressApi}"/>
+                            <Button Content="-"
+                                    Margin="0,0,5,0"
+                                    HorizontalAlignment="Right"
+                                    Grid.Column="0"
+                                    Width="30"
+                                    Height="30"
+                                    FontSize="25"
+                                    FontWeight="Medium"
+                                    Background="LightGray"
+                                    Command="{Binding RemoveCommand}"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"/>
                         </DockPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="5*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="-"
-                        Margin="0,0,5,0"
-                        HorizontalAlignment="Right"
-                        Grid.Column="0"
-                        Width="50"
-                        Height="50"
-                        FontSize="25"
-                        FontWeight="Medium"
-                        Background="LightGray"
-                        Command="{Binding RemoveCommand}"
-                        VerticalAlignment="Center"
-                        VerticalContentAlignment="Center"/>
+                <Label Content="Добавить новый адрес апи"
+                       Height="50"
+                       FontSize="15"
+                       VerticalContentAlignment="Center"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Right"
+                       Margin="5,0,5,0"/>
                 <Button Content="+"
-                        Margin="5,0,0,0"
-                        HorizontalAlignment="Left"
                         Grid.Column="1"
+                        Margin="0,0,5,0"
                         Width="50"
                         Height="50"
                         FontSize="25"
                         FontWeight="Medium"
+                        DockPanel.Dock="Right"
                         Background="LightGray"
                         Command="{Binding AddCommand}"
                         VerticalAlignment="Center"
@@ -73,7 +80,7 @@
             </Grid>
         </Grid>
         <DockPanel Grid.Row="1">
-            <Label Content="Через сколько автоматически сменить контент"
+            <Label Content="Через сколько автоматически сменить контент:"
                    Height="50"
                    FontSize="15"
                    HorizontalAlignment="Left"
