--- a/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
+++ b/Resto.Front.Api.DataSaturation/Views/SettingsWindow.xaml
@@ -53,7 +53,7 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Grid Grid.Row="1">
+            <Grid Margin="0,373,0,53" Grid.RowSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="5*"/>
                     <ColumnDefinition Width="*"/>
@@ -78,6 +78,14 @@
                         VerticalAlignment="Center"
                         VerticalContentAlignment="Center"/>
             </Grid>
+            <CheckBox Content="" HorizontalAlignment="Left" Margin="447,0,0,0" Grid.Row="1" VerticalAlignment="Center" Checked="CheckBox_Checked" IsChecked="{Binding EnableOrdersService}" />
+            <Label Content="Включить отправку чеков:"
+                Height="50"
+                FontSize="15"
+                VerticalContentAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                Margin="221,0,0,0" Grid.Row="1"/>
         </Grid>
         <DockPanel Grid.Row="1">
             <Label Content="Через сколько автоматически сменить контент:"
@@ -91,8 +99,8 @@
                     Height="40"
                     BorderThickness="1"
                     Margin="5,0,5,0"
-                    Width="140">                
-            <TextBox Text="{Binding SwitchMediaTime}"
+                    Width="140">
+                <TextBox Text="{Binding SwitchMediaTime}"
                      FontSize="25"
                      HorizontalContentAlignment="Center"
                      VerticalContentAlignment="Center"
@@ -101,7 +109,7 @@
                      Height="40"
                      Width="140"                 
                      HorizontalAlignment="Center"
-                     VerticalAlignment="Center"/>
+                     VerticalAlignment="Bottom" Margin="0,0,0,-1"/>
             </Border>
         </DockPanel>
         <Grid Grid.Row="2" Margin="5,0,5,0">
